[gd_scene load_steps=7 format=2]

[ext_resource path="res://assetes/enemy.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemy.gd" type="Script" id=2]
[ext_resource path="res://assetes/ship_light.png" type="Texture" id=3]
[ext_resource path="res://sounds/death.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 6.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 130.0

[node name="enemy" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="area"]
shape = SubResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 3 )

[node name="Position2D" type="Position2D" parent="."]

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="area" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="area" to="." method="_on_area_body_exited"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
